# agentic-rag

./: .dockerignore  .env.example  .gitignore  BUILD_CROSS_PLATFORM.md  CLAUDE.md  CORPORATE_NETWORK_ACCESS_REQUEST.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_COMPOSE_UPDATE.md  Dockerfile  Dockerfile.langgraph  EMAIL_TO_IT.txt  FINAL_SUMMARY.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IT_TICKET_COPY_PASTE.txt  JIRA_TICKET.txt  KNOWLEDGE_BASE_IMPROVEMENTS.md  QUICK_FIX_HTTPS_ERROR.md  QUICK_FIX_OTHER_COMPUTER.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SIMPLE_ACCESS_REQUEST.md  SLACK_MESSAGE.txt  TROUBLESHOOTING_NETWORK.md  UPLOAD_GUIDE.md  docker-compose.yml  langgraph.json  pyproject.toml  start.sh
.claude/: CLAUDE.md  plan.md  settings.json  settings.local.json
.claude/agents/: doc-writer.md  python-reviewer.md  rag-architect.md
.claude/docs/: architecture.md  drawio-arch-prompt.md
docs/: .$architecture.drawio.bkp  .$architecture_high_level.drawio.bkp  .$rag_architecture_domain.drawio.dtmp  IT_SECURITY_DOCUMENTATION.md  architecture.drawio  architecture.md  architecture_high_level.drawio  dataflow.drawio  developer-guide.md  eraser-architecture-diagram.md  eraser-dataflow-diagram.md  integration_architecture_domain.drawio  rag_architecture_domain.drawio
frontend/: .dockerignore  .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
model_server/: .dockerignore  Dockerfile  app.py  download_models.py  requirements.txt
scripts/: revectorize.py
src/agent/: graph.py  (+6 more)
tests/: conftest.py
(+91 files in other folders)
